@@ -1,8 +1,8 @@
 Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
-Version: 1.10.1
-Date: 2014-11-03
+Version: 1.10.2
+Date: 2015-02-25
 Depends: GSEABase, limma (>= 3.15.14)
 Imports: Biobase, BiocGenerics, methods, GSEAlm, Category, Matrix (>=
         1.0.9), parallel, annotate, genefilter, AnnotationDbi
