@@ -11,6 +11,7 @@ export("annotate_eset_list",
        "eSetOnDisk",
        "generate_gCMAP_NChannelSet",
        "eset_instances",
+       "go2cmap",
        "KEGG2cmap",
        "mapNmerge",
        "memorize",
